--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,24 @@
 .App {
-  padding: 40px 0;
+  padding: 30px 0;
+}
+
+.column {
+  background-color: #dee8ee;
+  padding: 0 15px;
+  height: 600px;
+  min-width: 200px;
+  overflow: auto;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
+
+.issue {
+  background-color: white;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
+
+.title {
+  font-weight: bold;
+  font-size: 1.2rem;
 }
