--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@
 .column {
   background-color: #dee8ee;
   padding: 0 15px;
-  height: 600px;
+  height: 75vh;
   min-width: 200px;
   overflow: auto;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
@@ -24,7 +24,6 @@
 }
 
 .input {
-  
   font-size: 1.3rem;
 }
 
